[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["andy-veafe <andy@veafe.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
websockets = "^10.2"
uvicorn = "^0.17.6"
aioredis = "^1.3.1"
PyJWT = "^2.3.0"
neo4j = "^4.4.2"
Pillow = "^9.1.0"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"
fastapi-camelcase = "^1.0.5"
fastapi-utils = "^0.2.1"
fastapi-limiter = "^0.1.4"
hiredis = "^2.0.0"
alembic = "^1.7.7"
databases = "^0.5.5"
email-validator = "^1.1.3"
asyncpg = "^0.25.0"
pg8000 = "^1.24.1"
bcrypt = "^3.2.0"
injector = "^0.19.0"
python-socketio = "5.3.0"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
